--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-firebase/app": "^23.3.0",
     "@react-native-firebase/auth": "^23.3.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
